fix: word breaks on dataset pages. close #833

--- a/packages/gbif-org/src/index.css
+++ b/packages/gbif-org/src/index.css
@@ -760,3 +760,8 @@ Constrain images and videos to the parent width and preserve their intrinsic asp
     }
   }
 }
+
+.gbif-word-break {
+  overflow-wrap: anywhere;
+  word-break: break-word;
+}
